- Added electron-builder publish target - Added standard-version release script - Corrected git urls

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "description": "Convert Lottie/BodyMovin JSON animations to .js files",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jonfranklin301/lottie-json-to-js-converter.git"
+    "url": "git+https://github.com/jonfranklin301/lottie-json-to-js.git"
   },
   "bugs": {
-    "url": "https://github.com/jonfranklin301/lottie-json-to-js-converter/issues"
+    "url": "https://github.com/jonfranklin301/lottie-json-to-js/issues"
   },
-  "homepage": "https://github.com/jonfranklin301/lottie-json-to-js-converter#readme",
+  "homepage": "https://github.com/jonfranklin301/lottie-json-to-js#readme",
   "keywords": [
     "lottie",
     "json to js"
@@ -19,18 +19,25 @@
   "scripts": {
     "dev": "electron-webpack dev",
     "compile": "electron-webpack",
-    "dist": "yarn compile && electron-builder",
-    "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null",
-    "dist:publish": "yarn compile && electron-builder -p"
+    "dist": "yarn compile && electron-builder -p=never",
+    "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null -p=never",
+    "dist:publish": "yarn compile && electron-builder -p=always",
+    "release": "standard-version",
+    "version": "echo \"Error: use npm run release\" && exit 1"
   },
   "build": {
     "appId": "com.electron.lottie-json-to-js",
     "productName": "Lottie to JS",
-    "publisher": "Jon Franklin",
     "win": {
       "target": "portable",
       "icon": "build/icon.ico"
-    }
+    },
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "jonfranklin301"
+      }
+    ]
   },
   "electronWebpack": {
     "whiteListedModules": [
@@ -56,7 +63,7 @@
   "standard-version": {
     "scripts": {
       "prerelease": "rm -rf dist/*",
-      "postbump": "dist:publish"
+      "posttag": "yarn dist:publish"
     }
   }
 }
