fix: standard-version scripts

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   "standard-version": {
     "scripts": {
       "prerelease": "rm -rf dist/*",
-      "posttag": "yarn dist:publish"
+      "posttag": "yarn dist:publish && git push --follow-tags origin master"
     }
   }
 }
